# football-lakehouse

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  schema-builder.sh  start-lakehouse.sh  stop-lakehouse.sh  superset_bootstrap.py  test-lakehouse.sh
airflow/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: test_lakehouse.py
catalog/trino/: iceberg.properties
docker/: README-docker.md  check-database.sh  compose.yml  init-metastore.sh  metastore-site.xml  simple_spark_test.py  start-lakehouse.sh  test_spark_config.conf  test_spark_ui.py
notebooks/: drop-tables_namespaces.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
spark/conf/: spark-defaults.conf
sql/: recreate_football_schema.sql
src/football_lakehouse/: __init__.py  main.py
trino/catalog/: football.properties
