[project]
name = "football-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
football-common = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.9",
]


[project.optional-dependencies]
dev = [
  "streamlit==1.48.1",
  "langchain==0.3.27",
  "trino==0.336.0",
  "pyspark==3.5.6",
  "pandas>=2.2,<3",
  "requests>=2.32,<3",
  "pyarrow",
  "orjson",
  "football-common",
]
